# Trace

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  alembic.ini  architecture.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  roadmap.md  stress_test.py
_save/: alembic.ini  pyproject.toml
_save/alembic/: env.py
_save/alembic/versions/: a4811a9423c3_initial.py  e02023c07769_add_time_series_to_routes.py
_save/models/: activity.py  gear.py  route.py
_save/schemas/: activity.py  gear.py
_save/services/: activity_processor.py  eddington.py  stats_engine.py
_save/static/: index.html  style.css
alembic/: env.py
alembic/versions/: 71a04673b786_add_training_load_and_daily_training_.py  86d73fb7d70c_add_gear_service_tracking.py  a1b2c3d4e5f6_extend_segment_effort_unique_constraint.py  bbd373f4583f_add_routes_table.py  c1a2b3c4d5e6_add_composite_indexes.py  cb91b256968a_initial.py  d2e3f4a5b6c7_add_refresh_tokens.py  d90ef3147c80_add_rest_day_to_training_sessions.py  e401659b052d_replace_session_targets_with_json.py  f5a6b7c8d9e0_add_segments.py  f6b7c8d9e0f1_add_training_blocks.py  f7c8d9e0f1a2_add_block_type_to_training_blocks.py  f8d9e0f1a2b3_add_file_hash_to_activities.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css
pgdata/: postmaster.pid
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
pgdata/pg_xact/: 0000
scripts/: backup.sh  restore.sh
testdata/: Bicicleta.fit  sample_run.gpx
tests/: test_api.py  test_gpx_parsing.py  test_phase2.py
trace_app/: auth.py  cache.py  config.py  database.py  logging.py  main.py
trace_app/models/: __init__.py  activity.py  activity_stats.py  daily_training_load.py  enums.py  gear.py  lap.py  refresh_token.py  route.py  segment.py  segment_effort.py  sync_source.py  training_block.py  training_plan.py  training_session.py  user.py  user_zone.py
trace_app/routers/: auth.py  segments.py
trace_app/schemas/: activity.py  auth.py  gear.py  route.py  segment.py  sync_source.py  training.py  user.py  user_zone.py
trace_app/services/: activity_processor.py  auth.py  (+5 more)
(+154 files in other folders)
